cleanup getting related entities