@@ -2,10 +2,8 @@ package com.exam.site.features;
 
 import com.exam.common.commands.PageableCommand;
 import com.exam.container.features.ContainerFeature;
-import com.exam.container.models.Container;
 import com.exam.instrument.commands.InstrumentBulkCreateCmd;
 import com.exam.instrument.features.InstrumentFeature;
-import com.exam.instrument.models.Instrument;
 import com.exam.site.commands.SiteCreateCmd;
 import com.exam.site.dtos.SiteSearch;
 import com.exam.site.models.Site;
@@ -17,21 +15,20 @@ import io.micronaut.data.model.Pageable;
 import jakarta.inject.Singleton;
 
 import javax.transaction.Transactional;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 
 @Singleton
 public class SiteFeature {
     private final SiteRepository siteRepository;
     private final InstrumentFeature instrumentFeature;
-    private final ContainerFeature containerFeature;
 
     public SiteFeature(SiteRepository siteRepository,
                        InstrumentFeature instrumentFeature,
                        ContainerFeature containerFeature) {
         this.siteRepository = siteRepository;
         this.instrumentFeature = instrumentFeature;
-        this.containerFeature = containerFeature;
     }
 
     public Optional<Site> findById(long id) {
@@ -41,14 +38,7 @@ public class SiteFeature {
     }
 
     private Site withInstruments(Site site) {
-        assert site.id() != null;
-        Map<Long, List<Instrument>> instrumentsBySiteId = instrumentFeature.findBySiteIdIn(List.of(site.id()));
-        List<Instrument> siteInstruments = instrumentsBySiteId.getOrDefault(site.id(), Collections.emptyList());
-        Map<Long, List<Container>> containersByInstrumentId = instrumentFeature.fetchContainers(siteInstruments);
-        List<Instrument> instruments = instrumentsBySiteId.getOrDefault(site.id(), Collections.emptyList()).stream()
-                .map(i -> instrumentFeature.populateContainers(containersByInstrumentId, i))
-                .toList();
-        return site.withInstruments(instruments);
+        return instrumentFeature.getSiteInstruments(List.of(site)).map(site);
     }
 
     public Page<Site> search(@Nullable SiteSearch search, PageableCommand pageableCommand) {
@@ -65,24 +55,11 @@ public class SiteFeature {
     }
 
     private Page<Site> withInstruments(Page<Site> page) {
-        if(page.isEmpty()){
+        if (page.isEmpty()) {
             return page;
         }
-        Set<Long> siteIds = page.getContent().stream()
-                .map(Site::id)
-                .collect(Collectors.toSet());
-        Map<Long, List<Instrument>> instrumentsBySiteId = instrumentFeature.findBySiteIdIn(siteIds);
-        List<Instrument> siteInstruments = instrumentsBySiteId.values().stream()
-                .flatMap(Collection::stream)
-                .toList();
-        Map<Long, List<Container>> containersByInstrumentId = instrumentFeature.fetchContainers(siteInstruments);
-        return page
-                .map(site -> {
-                    List<Instrument> instruments = instrumentsBySiteId.getOrDefault(site.id(), Collections.emptyList()).stream()
-                            .map(i -> instrumentFeature.populateContainers(containersByInstrumentId, i))
-                            .toList();
-                    return site.withInstruments(instruments);
-                });
+        InstrumentFeature.SiteInstruments si = instrumentFeature.getSiteInstruments(page.getContent());
+        return page.map(si::map);
     }
 
     @Transactional
